docs(site): fix scrollbar was overrided by header on the top

--- a/site/apps/Chrome/index.less
+++ b/site/apps/Chrome/index.less
@@ -97,11 +97,13 @@
     }
   }
   &__content-wrapper {
-    height: ~'calc(100vh - @{ui-unit-triple})';
     overflow-y: scroll;
   }
   &__content {
     padding: 70px @ui-unit-triple 140px;
+    &-top {
+      flex-shrink: 0;
+    }
   }
 }
 
