--- a/site/widgets/Layout/index.less
+++ b/site/widgets/Layout/index.less
@@ -35,20 +35,13 @@
 .layout__content {
   float: none !important;
   background-color: hsl(195, 19%, 92%);
-  //background-color: #f5f5f5;
   position: absolute;
   left: @ui-width-aside;
   right: 0;
   top: 0;
   bottom: 0;
-
-  // ~ flex: 1;
-  //flex-grow: 1;
-  //flex-basis: 0;
-  //.layout__content-scrollbar {
-  //  overflow: hidden;
-  //  padding: 0 0 140px;
-  //}
+  display: flex;
+  flex-direction: column;
 
   @media (max-width: 768px) {
     width: 100%;
